refactor: migrate PDF generation from fpdf to Maroto v2
- Replaced fpdf/gofpdf with Maroto v2 for PDF generation
- Rewrote all PDF widgets (text, table, box, image, layout) using Maroto's grid-based approach
- Updated style converter to work with Maroto's property system
- Simplified PDF formatter by removing legacy formatter
- Main PDF formatter now uses Rod/Chromium for HTML-to-PDF conversion

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 *.dll
 *.so
 *.dylib
-clicky
 
 # Test binary, built with `go test -c`
 *.test
@@ -55,5 +54,5 @@ coverage.html
 test.*
 hack/
 out.*
-clicky-*
+icky-*
 test-*
