feat: add semantic release workflow and fix GitHub CI/CD
- Add comprehensive test workflow with cross-platform testing
- Add dedicated lint workflow with golangci-lint v1.62.0
- Add semantic release workflow with conventional commits
- Add PR checks workflow for quality gates
- Configure dependabot for automated dependency updates
- Add commitlint configuration for commit message validation
- Add GitHub labeler configuration for automatic PR labeling
- Add CODEOWNERS file for automatic review assignment

The semantic release workflow will:
- Analyze commits using conventional commits format
- Automatically determine version bumps (major/minor/patch)
- Generate changelogs
- Create GitHub releases
- Trigger GoReleaser for binary and Docker image builds
- Update Homebrew and Scoop manifests (when tokens are configured)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,17 +7,27 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "09:00"
+      timezone: "UTC"
     open-pull-requests-limit: 10
-    reviewers:
-      - "@flanksource"
-    assignees:
-      - "@flanksource"
     commit-message:
-      prefix: "deps"
+      prefix: "chore"
+      prefix-development: "chore"
       include: "scope"
     labels:
       - "dependencies"
       - "go"
+    pull-request-branch-name:
+      separator: "-"
+    allow:
+      - dependency-type: "all"
+    groups:
+      # Group all minor and patch updates together
+      minor-and-patch:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
 
   # Enable version updates for GitHub Actions
   - package-ecosystem: "github-actions"
@@ -26,17 +36,16 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "09:00"
-    open-pull-requests-limit: 5
-    reviewers:
-      - "@flanksource"
-    assignees:
-      - "@flanksource"
+      timezone: "UTC"
+    open-pull-requests-limit: 10
     commit-message:
       prefix: "ci"
       include: "scope"
     labels:
       - "dependencies"
       - "github-actions"
+    pull-request-branch-name:
+      separator: "-"
 
   # Enable version updates for Docker
   - package-ecosystem: "docker"
@@ -45,14 +54,14 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "09:00"
-    open-pull-requests-limit: 3
-    reviewers:
-      - "@flanksource"
-    assignees:
-      - "@flanksource"
+      timezone: "UTC"
+    open-pull-requests-limit: 5
     commit-message:
-      prefix: "docker"
+      prefix: "chore"
+      prefix-development: "chore"
       include: "scope"
     labels:
       - "dependencies"
       - "docker"
+    pull-request-branch-name:
+      separator: "-"
