--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,16 +2,79 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [main, master]
+  workflow_dispatch:
+    inputs:
+      dry-run:
+        description: 'Run in dry-run mode (no actual release)'
+        required: false
+        default: 'false'
+        type: choice
+        options:
+          - 'true'
+          - 'false'
 
 permissions:
   contents: write
   packages: write
+  issues: write
+  pull-requests: write
   id-token: write
 
+env:
+  GO_VERSION: '1.24'
+
 jobs:
+  semantic-release:
+    name: Semantic Release
+    runs-on: ubuntu-latest
+    outputs:
+      new_release_published: ${{ steps.semantic.outputs.new_release_published }}
+      new_release_version: ${{ steps.semantic.outputs.new_release_version }}
+      new_release_major_version: ${{ steps.semantic.outputs.new_release_major_version }}
+      new_release_minor_version: ${{ steps.semantic.outputs.new_release_minor_version }}
+      new_release_patch_version: ${{ steps.semantic.outputs.new_release_patch_version }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install semantic-release
+        run: |
+          npm install -g semantic-release@23 \
+            @semantic-release/git@10 \
+            @semantic-release/github@10 \
+            @semantic-release/changelog@6 \
+            @semantic-release/exec@6 \
+            conventional-changelog-conventionalcommits@7
+
+      - name: Semantic Release (Dry Run)
+        if: github.event.inputs.dry-run == 'true'
+        id: semantic-dry
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          npx semantic-release --dry-run --no-ci
+
+      - name: Semantic Release
+        if: github.event.inputs.dry-run != 'true'
+        id: semantic
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          npx semantic-release
+
   goreleaser:
+    name: GoReleaser
+    needs: semantic-release
+    if: needs.semantic-release.outputs.new_release_published == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,18 +82,19 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Fetch tags
+        run: git fetch --force --tags
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
 
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-1.21-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-1.21-
+      - name: Install dependencies
+        run: |
+          go mod download
+          go mod tidy
 
       - name: Run tests
         run: make test
@@ -45,76 +109,50 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=ref,event=tag
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
-          distribution: goreleaser
           version: latest
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
+          SCOOP_BUCKET_GITHUB_TOKEN: ${{ secrets.SCOOP_BUCKET_GITHUB_TOKEN }}
           GITHUB_OWNER: ${{ github.repository_owner }}
-          # Uncomment these if you set up Homebrew and Scoop repositories
-          # HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
-          # SCOOP_BUCKET_GITHUB_TOKEN: ${{ secrets.SCOOP_BUCKET_GITHUB_TOKEN }}
 
-  # Create a GitHub release
-  github-release:
+  announce:
+    name: Announce Release
+    needs: [semantic-release, goreleaser]
+    if: needs.semantic-release.outputs.new_release_published == 'true'
     runs-on: ubuntu-latest
-    needs: goreleaser
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Generate changelog
-        id: changelog
-        run: |
-          # Get the tag name
-          TAG=${GITHUB_REF#refs/tags/}
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-          
-          # Get the previous tag
-          PREV_TAG=$(git describe --tags --abbrev=0 $TAG^ 2>/dev/null || echo "")
-          
-          # Generate changelog
-          if [ -n "$PREV_TAG" ]; then
-            echo "## Changes since $PREV_TAG" >> changelog.md
-            echo "" >> changelog.md
-            git log --pretty=format:"- %s (%h)" $PREV_TAG..$TAG --grep="^feat" --grep="^fix" --grep="^perf" --grep="^refactor" >> changelog.md
-          else
-            echo "## Initial Release" >> changelog.md
-            echo "" >> changelog.md
-            echo "This is the first release of Clicky!" >> changelog.md
-          fi
-          
-          # Read the changelog
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          cat changelog.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - name: Update release with changelog
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          body: ${{ steps.changelog.outputs.changelog }}
-          files: |
-            dist/checksums.txt
-            dist/*.tar.gz
-            dist/*.zip
-          draft: false
-          prerelease: ${{ contains(github.ref, '-') }}
+      - name: Create release announcement
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: v${{ needs.semantic-release.outputs.new_release_version }}
+        run: |
+          echo "🚀 Clicky $VERSION has been released!" > announcement.txt
+          echo "" >> announcement.txt
+          echo "## Installation" >> announcement.txt
+          echo "" >> announcement.txt
+          echo "### Using Go:" >> announcement.txt
+          echo "\`\`\`bash" >> announcement.txt
+          echo "go install github.com/${{ github.repository }}/cmd/clicky@$VERSION" >> announcement.txt
+          echo "\`\`\`" >> announcement.txt
+          echo "" >> announcement.txt
+          echo "### Using Homebrew (macOS/Linux):" >> announcement.txt
+          echo "\`\`\`bash" >> announcement.txt
+          echo "brew install ${{ github.repository_owner }}/tap/clicky" >> announcement.txt
+          echo "\`\`\`" >> announcement.txt
+          echo "" >> announcement.txt
+          echo "### Using Docker:" >> announcement.txt
+          echo "\`\`\`bash" >> announcement.txt
+          echo "docker pull ghcr.io/${{ github.repository }}:$VERSION" >> announcement.txt
+          echo "\`\`\`" >> announcement.txt
+          echo "" >> announcement.txt
+          echo "See the full changelog at: https://github.com/${{ github.repository }}/releases/tag/$VERSION" >> announcement.txt
+          cat announcement.txt
