chore: build fixes

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ on:
     types: [opened, synchronize, reopened, edited]
 
 env:
-  GO_VERSION: '1.24'
+  GO_VERSION: "1.24"
 
 jobs:
   validate-pr-title:
@@ -55,15 +55,15 @@ jobs:
         uses: codelytv/pr-size-labeler@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          xs_label: 'size/XS'
-          xs_max_size: '10'
-          s_label: 'size/S'
-          s_max_size: '100'
-          m_label: 'size/M'
-          m_max_size: '500'
-          l_label: 'size/L'
-          l_max_size: '1000'
-          xl_label: 'size/XL'
+          xs_label: "size/XS"
+          xs_max_size: "10"
+          s_label: "size/S"
+          s_max_size: "100"
+          m_label: "size/M"
+          m_max_size: "500"
+          l_label: "size/L"
+          l_max_size: "1000"
+          xl_label: "size/XL"
           fail_if_xl: false
 
   check-conflicts:
@@ -91,19 +91,19 @@ jobs:
         run: |
           required_files=("README.md" "LICENSE" "go.mod" "go.sum" "Makefile")
           missing_files=()
-          
+
           for file in "${required_files[@]}"; do
             if [ ! -f "$file" ]; then
               missing_files+=("$file")
             fi
           done
-          
+
           if [ ${#missing_files[@]} -gt 0 ]; then
             echo "❌ Missing required files:"
             printf '%s\n' "${missing_files[@]}"
             exit 1
           fi
-          
+
           echo "✅ All required files present"
 
   check-go-mod:
@@ -148,7 +148,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install commitlint
         run: |
@@ -168,19 +168,19 @@ jobs:
         run: |
           echo "## Pull Request Quality Gates" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          
+
           if [ "${{ needs.validate-pr-title.result }}" == "success" ]; then
             echo "✅ PR title follows conventional commits" >> $GITHUB_STEP_SUMMARY
           else
             echo "❌ PR title doesn't follow conventional commits" >> $GITHUB_STEP_SUMMARY
           fi
-          
+
           if [ "${{ needs.verify-files.result }}" == "success" ]; then
             echo "✅ All required files present" >> $GITHUB_STEP_SUMMARY
           else
             echo "❌ Missing required files" >> $GITHUB_STEP_SUMMARY
           fi
-          
+
           if [ "${{ needs.check-go-mod.result }}" == "success" ]; then
             echo "✅ Go modules are tidy and verified" >> $GITHUB_STEP_SUMMARY
           else
